# idm

./: .eslintrc.cjs  .gitignore  README.md  index.html  jsconfig.json  package-lock.json  package.json  postcss.config.js  project.sublime-project  tailwind.config.js  vite.config.js
.github/workflows/: release.yml
src/: App.svelte  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Button.svelte  DataCol.svelte  Icon.svelte  IconButton.svelte  TabBar.svelte
src/components/inputs/: InputCheckbox.svelte  InputMultiBlock.svelte  InputNumber.svelte  InputSelect.svelte  InputText.svelte  InputTextArray.svelte  InputTextarea.svelte  InputWrap.svelte
src/layout/: DatasetEditor.svelte  DatasetLoader.svelte  ExportEditor.svelte  ImageEditor.svelte  ImageGrid.svelte  ImageMultiEditor.svelte  InputSourceEditor.svelte  Manager.svelte  TagEditor.svelte
src/lib/: Greet.svelte
src/util/: dataset.js  images.js  settings.js  tags.js  window.js
